@@ -109,7 +109,6 @@ file(
   include/solarus/lowlevel/PixelFilter.h
   include/solarus/lowlevel/Point.h
   include/solarus/lowlevel/Point.inl
-  include/solarus/lowlevel/Output.h
   include/solarus/lowlevel/QuestFiles.h
   include/solarus/lowlevel/Random.h
   include/solarus/lowlevel/Rectangle.h
@@ -302,7 +301,6 @@ file(
   src/lowlevel/InputEvent.cpp
   src/lowlevel/ItDecoder.cpp
   src/lowlevel/Music.cpp
-  src/lowlevel/Output.cpp
   src/lowlevel/PixelBits.cpp
   src/lowlevel/PixelFilter.cpp
   src/lowlevel/Point.cpp
